@@ -5,7 +5,7 @@ from inspect import isclass
 
 from django.utils.functional import cached_property
 
-from .utils import fqn, get_attr, import_by_name  # noqa
+from .utils import fqn, get_attr, import_by_name, get_display_string  # noqa
 
 logger = logging.getLogger(__name__)
 
@@ -15,6 +15,7 @@ class Registry(list):
 
     def __init__(self, *args):
         self._klass = args[0]
+        self._choices = None
         list.__init__(self, *args[1:])
 
     @cached_property
@@ -34,11 +35,13 @@ class Registry(list):
         return True
 
     def as_choices(self):
-        return sorted((fqn(i), fqn(i)) for i in self if i)
+        if not self._choices:
+            self._choices = sorted((fqn(klass), fqn(klass)) for klass in self)
+        return self._choices
 
     def append(self, x):
-        # if isinstance(x, six.string_types):
-        #     x = import_by_name(x)
+        if isinstance(x, six.string_types):
+            x = import_by_name(x)
 
         if self.klass and not issubclass(x, self.klass):
             raise ValueError("%s is not a subtype of %s" % (x, self.klass))
@@ -47,6 +50,7 @@ class Registry(list):
             raise ValueError
 
         super(Registry, self).append(x)
+        self._choices = None
 
     register = append
 
