@@ -10,7 +10,6 @@ DJANGO_SETTINGS_MODULE=demoproject.settings
 django_find_project = false
 norecursedirs = .tox
 python_files=tests/test_*.py
-envlogdir={envdir}/log
 addopts =
         --tb=short
         --capture=no
